--- a/topico4.html
+++ b/topico4.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    TESTANDO
+    <button class="botao">BOTAO</button>
 
     <script src="semana5.js"></script>
 </body>
