finalização do topico 4 e 5

--- a/topico4.html
+++ b/topico4.html
@@ -8,6 +8,6 @@
 <body>
     <button class="botao">BOTAO</button>
 
-    <script src="semana5.js"></script>
+    <script src="topico4.html"></script>
 </body>
 </html>
