--- a/topico5.html
+++ b/topico5.html
@@ -10,6 +10,6 @@
     <h1 class="titulo-teste">TEXTO DO TITULO</h1>
 
 
-  <script src="semana6.js"></script>
+  <script src="topico5.html"></script>
   </body>
 </html>
